Fixed some spacing things

--- a/main.css
+++ b/main.css
@@ -72,7 +72,8 @@ p, div {
 
 nav .container {
     display: grid;
-    grid-template-columns: repeat(6, minmax(0, 1fr));
+    grid-template-columns: repeat(6, 1fr);
+    /* grid-template-columns: repeat(6, minmax(0, 1fr)); */
     gap: 10px;
     padding: 5px 0;
     margin: 0 auto;
